# wmpp

./: CMakeLists.txt  run  xinitrc
src/: error.cpp  error.hpp  main.cpp  manager.cpp  manager.hpp  randr.cpp  randr.hpp  util.hpp
src/layout/: graph.hpp
